# wave-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: blinky.rs  config.rs  keyboard.rs  lib.rs  logger.rs  main.rs  usb.rs  utils.rs  web.rs
src/keyboard/: action.rs  debounce.rs  dma.rs  keys.rs  layers.rs  mouse.rs  scan.rs
src/other/: blinky.rs
src/usb/: ethernet.rs  hid.rs  network_stack.rs  serial.rs  serial_logger.rs  usb_device.rs
src/utils/: dma.rs
src/web/: network_stack.rs  utils.rs  web_server.rs
tcp-tester/: main.py  pyproject.toml
